--- a/client/styles/dyba v2.scss
+++ b/client/styles/dyba v2.scss
@@ -24,17 +24,26 @@
 }
 .dyba-container {
   position: relative;
-  width: 90%;
+  width: 100%;
   height: auto;
   margin: 0 auto;
 }
 .dyba-header {
   position: relative;
   display: block;
-  width: 100%;
-  margin: 0;
+  width: 80%;
+  margin: 0 auto;
 }
-.dyba-title-bar {
+.dyba-main {
+  position: relative;
+  display: block;
+  width: 80%;
+  height: 900px;
+  margin: 0 auto;
+  border-top: 1px dotted #005214;
+  background-color: rgb(208, 209, 208);
+}
+.dyba-nav {
   position: relative;
   display: block;
   height: auto;
@@ -42,19 +51,18 @@
 .dyba-logo-container {
   position: relative;
   display: inline-block;
+  padding-top: 5px;
   height: auto;
   text-align: center;
 }
 .home-hidden {
   position: absolute;
   display: inline-block;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  line-height: 100px;
-  font-size: 20px;
-  font-family: 'Happy Monkey', cursive;
+  height: 135px;
+  width: 156px;
+  margin: 0;
+  line-height: 135px;
+  font-size: 28px;
   color: white;
   text-align: center;
   opacity: 0;
@@ -62,51 +70,116 @@
 .dyba-nav-logo {
   position: relative;
   display: inline-block;
-  height: 100px;
+  height: 135px;
 }
-.dyba-title-container {
+.dyba-links-container {
   position: relative;
   display: inline-block;
+  text-align: center;
+}
+.dyba-links-container .row {
+  height: 40px;
+  line-height: 40px;
+}
+.dyba-links-container .buffer-row {
+  height: 85px;
+}
+.dyba-links-container .xs-row {
   height: auto;
+  line-height: 100%;
 }
 .dyba-jaguars {
   position: relative;
+  text-decoration: none;
   display: block;
   color: white;
   text-align: left;
-  font-size: 3vw;
-  line-height: 100px;
+  font-size: 35px;
+  line-height: 85px;
   font-weight: bold;
   font-family: garamond;
 }
-.dyba-nav-bar {
+.dyba-jaguars-sm {
   position: relative;
-  display: block;
-  margin: 0;
-}
-.dyba-nav-container {
-  position: relative;
-  padding: 0;
-  width: 100%;
-  margin-bottom: 0;
-  background-color: white;
+  display: inline-block;
+  padding: 0 10px;
+  color: white;
+  font-size: 30px;
+  line-height: 85px;
+  font-weight: bold;
+  font-family: garamond;
   text-align: center;
+}
+.dyba-nav-menu {
+  padding: 0;
+  width: 95%;
+  max-width: 650px;
+  margin: auto;
+  text-align: center;
+}
+.dyba-xs-nav-dropdown {
+  padding: 0;
+  background: #999;
+  width: 90%;
+  max-width: 400px;
+  margin: auto;
+}
+.dyba-xs-nav-button {
+  width: 100%;
 }
 .dyba-nav-link-container {
   position: relative;
   display: inline-block;
   width: auto;
-  height: 30px;
+}
+.dyba-nav-header-container {
+  position: relative;
+  display: inline-block;
+  width: auto;
 }
 .dyba-nav-link {
   position: relative;
   text-decoration: none;
   display: block;
-  color: black;
+  color: white;
   text-align: center;
+  font-size: 20px;
+  font-family: garamond;
+}
+.dyba-nav-header {
+  position: relative;
+  text-decoration: none;
+  display: block;
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  font-family: garamond;
+}
+.dyba-nav-submenu {
+  position: absolute;
+  width: 200px;
+  height: auto;
+  padding: 10px;
+  background: #005214;
+  z-index: 1;
+  display: none;
+}
+.dyba-nav-submenu-last {
+    margin-left: -135px;
+}
+.dyba-nav-submenu li {
   line-height: 30px;
-  font-size: 16px;
-  font-family: 'Happy Monkey', cursive;
+  text-align: left;
+}
+.dyba-nav-submenu li a {
+  color: #fff;
+  font-size: 20px;
+  font-family: garamond;
+  font-weight: bold;
+}
+.dyba-nav-submenu li a:hover {
+  color: #999;
+  text-decoration: none;
 }
 .dyba-nav-item {
   position: relative;
@@ -116,66 +189,8 @@
 }
 .dyba-nav-logo-small {
   position: relative;
-  height: 5px;
+  height: 15px;
   margin-top: -3px;
-}
-.dyba-nav-header-container {
-  position: relative;
-  display: inline-block;
-  width: auto;
-  height: 30px;
-}
-.dyba-nav-header {
-  position: relative;
-  text-decoration: none;
-  display: block;
-  color: black;
-  text-align: center;
-  line-height: 30px;
-  font-size: 16px;
-  font-family: 'Happy Monkey', cursive;
-}
-.dyba-nav-submenu {
-  position: absolute;
-  width: 200px;
-  height: auto;
-  padding: 10px;
-  background: #fff;
-  border: 1px solid #999;
-  border-radius: 0 0 5px 5px;
-  box-shadow: 3px 3px 10px #999, -3px 3px 10px #999;
-  z-index: 1;
-  display: none;
-}
-.dyba-nav-submenu li {
-  line-height: 30px;
-  text-align: left;
-}
-.dyba-nav-submenu li a {
-  color: black;
-  font-size: 15px;
-  font-family: 'Happy Monkey', cursive;
-}
-.dyba-nav-submenu li a:hover {
-  color: #999;
-  text-decoration: none;
-}
-.dyba-xs-nav-dropdown {
-  width: 90%;
-  max-width: 350px;
-  margin: auto;
-  font-family: 'Happy Monkey', cursive;
-}
-.dyba-xs-nav-button {
-  width: 100%;
-}
-.dyba-main {
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 900px;
-  margin: 0;
-  background-color: #dddedd;
 }
 ul {
   list-style-type: none;
@@ -239,13 +254,19 @@ ul {
   font-weight: bold;
   padding-top: 35%;
 }
-@media (max-width: 768px) {
-  .dyba-container {
-    width: 100%;
+@media (max-width: 1050px) {
+  .dyba-nav-logo {
+    height: 100px;
   }
-  .dyba-jaguars {
-  text-align: center;
-  line-height: 70px;
-  font-size: 4vw;
+  .home-hidden {
+  height: 100px;
+  width: 115px;
+  line-height: 100px;
+  font-size: 22px;
+  }
+}
+@media (max-width: 799px) {
+  .dyba-main {
+    width: 100%;
   }
 }
