--- a/client/templates/dyba-navbar v2.html
+++ b/client/templates/dyba-navbar v2.html
@@ -1,10 +1,17 @@
 <nav class="dyba-nav row">
-  <a href="#" class="dyba-logo-container col-xs-12 col-md-3">
-    <p class="home-hidden">Home</p>
-    <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-large">
+  <a href="#" class="dyba-logo-container col-xs-12 hidden-sm col-md-3">
+    <span class="home-hidden">Home</span>
+    <img src="/images/Jags-shield-logo-white-text.png" class="dyba-nav-logo">
   </a>
+  <div class="dyba-logo-container hidden-xs col-sm-12 hidden-md hidden-lg">
+    <span class="home-hidden">Home</span>
+    <img src="/images/Jags-shield-logo-white-text.png" class="dyba-nav-logo">
+    <span class="dyba-jaguars dyba-jaguars-sm">D'EVELYN YOUTH BASKETBALL</span>
+  </div>
   <ul class="dyba-links-container col-xs-12 col-md-9">
-    <li class="row buffer-row hidden-xs hidden-sm"></li>
+    <li class="row buffer-row hidden-xs hidden-sm">
+      <span class="dyba-jaguars">D'EVELYN YOUTH BASKETBALL</span>
+    </li>
     <li class="row hidden-xs">
       <ul class="dyba-nav-menu">
         <li class="dyba-nav-link-container">
@@ -12,11 +19,11 @@
         </li>
         <li class="dyba-nav-item roar">
           <a href="#">
-            <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
+            <img src="/images/Jags-shield-logo-all-white.png" class="dyba-nav-logo-small">
           </a>
         </li>
         <li class="dyba-nav-header-container">
-          <div class="dyba-nav-header">Teams</div>
+          <a class="dyba-nav-header" role="menuitem" href="#">Teams</a>
           <ul class="dyba-nav-submenu">
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
@@ -24,10 +31,10 @@
           </ul>
         </li>
         <li class="dyba-nav-item">
-          <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
+          <img src="/images/Jags-shield-logo-all-white.png" class="dyba-nav-logo-small">
         </li>
         <li class="dyba-nav-header-container">
-          <div class="dyba-nav-header">Programs</div>
+          <a class="dyba-nav-header" role="menuitem" href="#">Programs</a>
           <ul class="dyba-nav-submenu">
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
@@ -35,10 +42,10 @@
           </ul>
         </li>
         <li class="dyba-nav-item">
-          <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
+          <img src="/images/Jags-shield-logo-all-white.png" class="dyba-nav-logo-small">
         </li>
         <li class="dyba-nav-header-container">
-          <div class="dyba-nav-header">About</div>
+          <a class="dyba-nav-header" role="menuitem" href="#">About</a>
           <ul class="dyba-nav-submenu">
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
@@ -46,10 +53,10 @@
           </ul>
         </li>
         <li class="dyba-nav-item">
-          <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
+          <img src="/images/Jags-shield-logo-all-white.png" class="dyba-nav-logo-small">
         </li>
         <li class="dyba-nav-header-container">
-          <div class="dyba-nav-header">Coaches</div>
+          <a class="dyba-nav-header" role="menuitem" href="#">Coaches</a>
           <ul class="dyba-nav-submenu dyba-nav-submenu-last">
             <li><a href="#">Link 1</a></li>
             <li><a href="#">Link 2</a></li>
@@ -75,12 +82,3 @@
     </li>
   </ul>
 </nav>
-
-
-
-
-
-
-
-
-
