--- a/client/templates/dyba-navbar.html
+++ b/client/templates/dyba-navbar.html
@@ -1,92 +1,83 @@
-<nav class="dyba-nav row">
-  <a href="#" class="dyba-logo-container col-xs-12 hidden-sm col-md-3">
-    <p class="home-hidden">Home</p>
-    <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo">
+<div class="dyba-title-bar row">
+  <div class="hidden-xs col-sm-1"></div>
+  <a href="#" class="dyba-logo-container hidden-xs col-sm-2">
+    <span class="home-hidden">Home</span>
+    <img src="/images/Jags-shield-logo-white-text.png" class="dyba-nav-logo">
   </a>
-  <div class="dyba-logo-container hidden-xs col-sm-12 hidden-md hidden-lg">
-    <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo">
-    <span class="dyba-jaguars dyba-jaguars-sm">D'EVELYN YOUTH BASKETBALL</span>
+  <div class="dyba-title-container col-xs-12 col-sm-8">
+    <span class="dyba-jaguars">D'EVELYN YOUTH BASKETBALL</span>
   </div>
-  <ul class="dyba-links-container col-xs-12 col-md-9">
-    <li class="row buffer-row hidden-xs hidden-sm">
-      <span class="dyba-jaguars">D'EVELYN YOUTH BASKETBALL</span>
+  <div class="hidden-xs col-sm-1"></div>
+</div>
+
+<nav class="dyba-nav-bar row">
+  <ul class="dyba-nav-container hidden-xs col-sm-12">
+    <li class="dyba-nav-link-container">
+      <a class="dyba-nav-link" role="menuitem" href="/pages/project.html">REGISTRATION</a>
     </li>
-    <li class="row hidden-xs">
-      <ul class="dyba-nav-menu">
-        <li class="dyba-nav-link-container">
-          <a class="dyba-nav-link" role="menuitem" href="/pages/project.html">Registration</a>
-        </li>
-        <li class="dyba-nav-item roar">
-          <a href="#">
-            <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
-          </a>
-        </li>
-        <li class="dyba-nav-header-container">
-          <div class="dyba-nav-header">Teams</div>
-          <ul class="dyba-nav-submenu">
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-          </ul>
-        </li>
-        <li class="dyba-nav-item">
-          <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
-        </li>
-        <li class="dyba-nav-header-container">
-          <div class="dyba-nav-header">Programs</div>
-          <ul class="dyba-nav-submenu">
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-          </ul>
-        </li>
-        <li class="dyba-nav-item">
-          <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
-        </li>
-        <li class="dyba-nav-header-container">
-          <div class="dyba-nav-header">About</div>
-          <ul class="dyba-nav-submenu">
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-          </ul>
-        </li>
-        <li class="dyba-nav-item">
-          <img src="/images/Jags shield logo-white.png" class="dyba-nav-logo-small">
-        </li>
-        <li class="dyba-nav-header-container">
-          <div class="dyba-nav-header">Coaches</div>
-          <ul class="dyba-nav-submenu dyba-nav-submenu-last">
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-          </ul>
-        </li>
+    <li class="dyba-nav-item roar">
+      <a href="#">
+        <img src="/images/Jags-shield-logo-all-black.png" class="dyba-nav-logo-small">
+      </a>
+    </li>
+    <li class="dyba-nav-header-container">
+      <a class="dyba-nav-header" role="menuitem" href="#">TEAMS</a>
+      <ul class="dyba-nav-submenu">
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
       </ul>
     </li>
-    <li class="row xs-row hidden-sm hidden-md hidden-lg">
-      <div class="dropdown dyba-xs-nav-dropdown">
-        <button class="btn btn-default dropdown-toggle dyba-xs-nav-button" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-          Menu
-          <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li role="separator" class="divider"></li>
-          <li><a href="#">Separated link</a></li>
-        </ul>
-      </div>
+    <li class="dyba-nav-item">
+      <img src="/images/Jags-shield-logo-all-black.png" class="dyba-nav-logo-small">
+    </li>
+    <li class="dyba-nav-header-container">
+      <a class="dyba-nav-header" role="menuitem" href="#">PROGRAMS</a>
+      <ul class="dyba-nav-submenu">
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
+      </ul>
+    </li>
+    <li class="dyba-nav-item">
+      <img src="/images/Jags-shield-logo-all-black.png" class="dyba-nav-logo-small">
+    </li>
+    <li class="dyba-nav-header-container">
+      <a class="dyba-nav-header" role="menuitem" href="#">ABOUT</a>
+      <ul class="dyba-nav-submenu">
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
+      </ul>
+    </li>
+    <li class="dyba-nav-item">
+      <img src="/images/Jags-shield-logo-all-black.png" class="dyba-nav-logo-small">
+    </li>
+    <li class="dyba-nav-header-container">
+      <a class="dyba-nav-header" role="menuitem" href="#">COACHES</a>
+      <ul class="dyba-nav-submenu">
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
+      </ul>
     </li>
   </ul>
 </nav>
 
-
-
-
-
-
-
+<div class="row xs-row hidden-sm hidden-md hidden-lg">
+  <div class="dropdown dyba-xs-nav-dropdown">
+    <button class="btn btn-default dropdown-toggle dyba-xs-nav-button" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+      Menu
+      <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+      <li><a href="#">Action</a></li>
+      <li><a href="#">Another action</a></li>
+      <li><a href="#">Something else here</a></li>
+      <li role="separator" class="divider"></li>
+      <li><a href="#">Separated link</a></li>
+    </ul>
+  </div>
+</div>
 
 
