--- a/public/main.css
+++ b/public/main.css
@@ -62,33 +62,23 @@
   display: block;
   position: relative;
   width: 100%;
+  height: 1040px;
   background-image: url("/images/Jags Logo Green.png");
   background-size: 200px;
 }
 
-/*.dyba-body::after {
-  content: "";
-  background-image: url("/images/Jags Logo Green.png");
-  background-size: 200px;
-  opacity: 1;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  position: absolute;
-  z-index: -1;
-}*/
 .dyba-background {
   margin: 0;
   display: block;
   position: relative;
   width: 100%;
+  height: auto;
   background-image: linear-gradient(to right, rgba(0, 82, 20, 0.9), #005214 20%, #005214 80%, rgba(0, 82, 20, 0.9));
 }
 
 .dyba-container {
   position: relative;
-  width: 100%;
+  width: 90%;
   height: auto;
   margin: 0 auto;
 }
@@ -96,11 +86,11 @@
 .dyba-header {
   position: relative;
   display: block;
-  width: 80%;
-  margin: 0 auto;
+  width: 100%;
+  margin: 0;
 }
 
-.dyba-nav {
+.dyba-title-bar {
   position: relative;
   display: block;
   height: auto;
@@ -109,19 +99,20 @@
 .dyba-logo-container {
   position: relative;
   display: inline-block;
-  padding-top: 5px;
-  height: 100%;
+  height: auto;
   text-align: center;
 }
 
 .home-hidden {
   position: absolute;
   display: inline-block;
-  height: 135px;
-  width: 166px;
-  margin: 0;
-  line-height: 135px;
-  font-size: 28px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  line-height: 100px;
+  font-size: 20px;
+  font-family: 'Happy Monkey', cursive;
   color: white;
   text-align: center;
   opacity: 0;
@@ -130,129 +121,57 @@
 .dyba-nav-logo {
   position: relative;
   display: inline-block;
-  height: 135px;
+  height: 100px;
 }
 
-.dyba-links-container {
+.dyba-title-container {
   position: relative;
   display: inline-block;
-  text-align: center;
-}
-
-.dyba-links-container .row {
-  height: 40px;
-  line-height: 40px;
-}
-
-.dyba-links-container .buffer-row {
-  height: 85px;
-}
-
-.dyba-links-container .xs-row {
   height: auto;
-  line-height: 100%;
 }
 
 .dyba-jaguars {
   position: relative;
-  text-decoration: none;
   display: block;
   color: white;
   text-align: left;
-  font-size: 35px;
-  line-height: 85px;
+  font-size: 3vw;
+  line-height: 100px;
   font-weight: bold;
   font-family: garamond;
 }
 
-.dyba-jaguars-sm {
+.dyba-nav-bar {
   position: relative;
-  display: inline-block;
-  padding: 0 10px;
-  color: white;
-  font-size: 25px;
-  line-height: 85px;
-  font-weight: bold;
-  font-family: garamond;
-  text-align: center;
+  display: block;
+  margin: 0;
 }
 
-.dyba-nav-menu {
+.dyba-nav-container {
+  position: relative;
   padding: 0;
-  width: 95%;
-  max-width: 650px;
-  margin: auto;
-  text-align: center;
-}
-
-.dyba-xs-nav-dropdown {
-  padding: 0;
-  background: #999;
-  width: 90%;
-  max-width: 400px;
-  margin: auto;
-}
-
-.dyba-xs-nav-button {
   width: 100%;
+  margin-bottom: 0;
+  background-color: white;
+  text-align: center;
 }
 
 .dyba-nav-link-container {
   position: relative;
   display: inline-block;
   width: auto;
-}
-
-.dyba-nav-header-container {
-  position: relative;
-  display: inline-block;
-  width: auto;
+  height: 30px;
 }
 
 .dyba-nav-link {
   position: relative;
   text-decoration: none;
   display: block;
-  color: white;
+  color: black;
   text-align: center;
-  font-size: 20px;
-  font-family: garamond;
-}
-
-.dyba-nav-header {
-  position: relative;
-  text-decoration: none;
-  display: block;
-  color: white;
-  text-align: center;
-  font-size: 20px;
-  font-family: garamond;
-}
-
-.dyba-nav-submenu {
-  position: absolute;
-  width: 200px;
-  height: auto;
-  padding: 10px;
-  background: #005214;
-  z-index: 1;
-  display: none;
-}
-
-.dyba-nav-submenu-last {
-  margin-left: -135px;
-}
-
-.dyba-nav-submenu li {
   line-height: 30px;
-  text-align: left;
-}
-
-.dyba-nav-submenu li a {
-  color: #999;
-  font-size: 20px;
-  font-family: garamond;
-  font-weight: bold;
+  font-size: 16px;
+  font-family: 'Happy Monkey', cursive;
 }
 
 .dyba-nav-item {
@@ -264,18 +183,75 @@
 
 .dyba-nav-logo-small {
   position: relative;
-  height: 20px;
-  margin: 0;
+  height: 5px;
+  margin-top: -3px;
+}
+
+.dyba-nav-header-container {
+  position: relative;
+  display: inline-block;
+  width: auto;
+  height: 30px;
+}
+
+.dyba-nav-header {
+  position: relative;
+  text-decoration: none;
+  display: block;
+  color: black;
+  text-align: center;
+  line-height: 30px;
+  font-size: 16px;
+  font-family: 'Happy Monkey', cursive;
+}
+
+.dyba-nav-submenu {
+  position: absolute;
+  width: 200px;
+  height: auto;
+  padding: 10px;
+  background: #fff;
+  border: 1px solid #999;
+  border-radius: 0 0 5px 5px;
+  box-shadow: 3px 3px 10px #999, -3px 3px 10px #999;
+  z-index: 1;
+  display: none;
+}
+
+.dyba-nav-submenu li {
+  line-height: 30px;
+  text-align: left;
+}
+
+.dyba-nav-submenu li a {
+  color: black;
+  font-size: 15px;
+  font-family: 'Happy Monkey', cursive;
+}
+
+.dyba-nav-submenu li a:hover {
+  color: #999;
+  text-decoration: none;
+}
+
+.dyba-xs-nav-dropdown {
+  width: 90%;
+  max-width: 350px;
+  margin: auto;
+  font-family: 'Happy Monkey', cursive;
+}
+
+.dyba-xs-nav-button {
+  width: 100%;
 }
 
 .dyba-main {
   position: relative;
   display: block;
-  width: 80%;
-  height: 700px;
-  margin: 0 auto;
-  border-top: 1px dotted #005214;
-  background-color: #d0d1d0;
+  width: 100%;
+  height: 900px;
+  margin: 0;
+  background-color: #dddedd;
 }
 
 ul {
@@ -347,15 +323,14 @@ ul {
   padding-top: 35%;
 }
 
-@media (max-width: 1050px) {
-  .dyba-nav-logo {
-    height: 100px;
-  }
-}
-
-@media (max-width: 799px) {
-  .dyba-main {
+@media (max-width: 768px) {
+  .dyba-container {
     width: 100%;
+  }
+  .dyba-jaguars {
+    text-align: center;
+    line-height: 70px;
+    font-size: 4vw;
   }
 }
 
